# dj-app

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
app/: Dockerfile
app/src/: .env.local  pyproject.toml  schema.yml
app/src/accounts/: admin.py  factory.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/src/accounts/migrations/: 0001_initial.py  0002_merchant.py  0003_product_service.py  0004_category_hashtag_keyword_remove_product_created_at_and_more.py  0005_alter_category_name_alter_hashtag_name_and_more.py
app/src/accounts/tests/: test_auth.py  test_category.py  test_hashtag.py  test_keyword.py  test_merchant.py  test_product.py  test_promotion.py  test_service.py  test_user.py
app/src/config/: asgi.py  urls.py  wsgi.py
app/src/config/settings/: base.py  test.py
app/src/core/: settings.py  wsgi.py
